# molecular-simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  chat.txt
Molecular Simulation/: connection.hpp  emitter.cpp  emitter.hpp  gaussian.cpp  hub.cpp  hub.hpp  main.cpp  networkExecution.cpp  networkExecution.hpp  particle.cpp  particle.hpp  receiver.cpp  receiver.hpp  simulation.cpp  simulation.hpp  simulationNetwork.cpp  simulationNetwork.hpp  simulationNetworkLoader.cpp  singleExecution.cpp  singleExecution.hpp  sink.cpp  sink.hpp
Molecular Simulation.xcodeproj/: project.pbxproj
Molecular Simulation.xcodeproj/xcuserdata/daghanerdonmez.xcuserdatad/xcschemes/: xcschememanagement.plist
Molecular Simulation/Boundaries/: Box.cpp  Box.hpp  Cylinder.cpp  Cylinder.hpp  NoBoundary.cpp  NoBoundary.hpp  boundary.hpp  box.cpp  box.hpp  cylinder.cpp  cylinder.hpp  noBoundary.cpp  noBoundary.hpp
Molecular Simulation/Bugs/: Buglog.txt
Molecular Simulation/Config/: config.h  deneme.yaml  flow.json  flows (2).json  flows.json  network_config.yaml  network_config_maker.py  node-red-to-config.py  node-red-to-yaml.py  oldconfig.h
Molecular Simulation/GLHeaders/: commonHeaders.cpp  commonHeaders.hpp
Molecular Simulation/GLHeaders/glad/: glad.h
Molecular Simulation/Math/: gaussian.cpp  geometry2d.cpp  geometry2d.hpp  random.cpp
Molecular Simulation/Output/: grapher.py  writer.cpp  writer.hpp
Molecular Simulation/Receivers/: receiver.cpp  receiver.hpp  ringReceiver.cpp  ringReceiver.hpp  sphericalReceiver.hpp  tangentTrapReceiver.cpp
Molecular Simulation/Shaders/: fragmentshader.txt  shader.h  vertexshader.txt
Output/Outputs/2025.03.28-22.53.16.537/pipe3-c/: #1-Sphere type.txt  #2-Ring type.txt
Output/Outputs/2025.03.28-22.53.37.228/pipe3-c/: #1-Sphere type.txt  #2-Ring type.txt
Output/Outputs/2025.03.29-00.05.54.913/pipe3-c/: #1-Sphere type.txt  #2-Ring type.txt
Output/Outputs/2025.03.29-00.07.07.792/pipe3-c/: #1-Sphere type.txt
scripts/setup/: README.md  remove-node-red.ps1  remove-node-red.sh  setup_node_red.ps1  setup_node_red.sh
source/: connection.hpp  networkExecution.hpp  singleExecution.cpp
source/Receivers/: tangentTrapReceiver.hpp
source/Shaders/: shader.h
src/: main.cpp
src/Config/: node-red-to-config.py
src/GLHeaders/: commonHeaders.hpp
src/GLHeaders/glad/: glad.c
src/Math/: coordinateSystemTransformations.cpp  gaussian.hpp
src/Receivers/: sphericalReceiver.cpp
src/config/: config.h  deneme.yaml  flow.json  network_config.yaml  node-red-to-config.py
src/config/bulkconfigs/: network_config_0.yaml  network_config_1.yaml  network_config_10.yaml  network_config_11.yaml  network_config_12.yaml  network_config_13.yaml  network_config_14.yaml  network_config_15.yaml  network_config_16.yaml  network_config_17.yaml  network_config_18.yaml  network_config_19.yaml  network_config_2.yaml  network_config_20.yaml  network_config_21.yaml  network_config_22.yaml  network_config_23.yaml  network_config_24.yaml  network_config_25.yaml  network_config_26.yaml  network_config_27.yaml  network_config_28.yaml  network_config_29.yaml  network_config_3.yaml  network_config_30.yaml  network_config_31.yaml  network_config_32.yaml  network_config_33.yaml  network_config_34.yaml  network_config_35.yaml  network_config_36.yaml  network_config_37.yaml  network_config_38.yaml  network_config_39.yaml  network_config_4.yaml  network_config_40.yaml  network_config_41.yaml  network_config_42.yaml  network_config_43.yaml  network_config_44.yaml  (+60 more)
src/config/unused/: deneme.yaml
src/core/: main.cpp  particle.cpp  particle.hpp  singleExecution.cpp  singleExecution.hpp
src/core/boundaries/: box.hpp  cylinder.cpp  cylinder.hpp
src/core/connections/: connection.cpp  connection.hpp  hub.hpp  simulation.cpp  simulation.hpp  sink.cpp  sink.hpp
src/core/emitters/: emitter.cpp
src/core/network/: networkExecution.cpp  networkExecution.hpp  simulationNetwork.cpp  simulationNetwork.hpp  simulationNetworkLoader.cpp  simulationNetworkLoader.hpp
src/core/receivers/: receiver.cpp  receiver.hpp  ringReceiver.cpp  ringReceiver.hpp  ringReceiverWithThickness.cpp  ringReceiverWithThickness.hpp  sphericalReceiver.cpp  sphericalReceiver.hpp  tangentTrapReceiver.hpp  trapReceiver.cpp  trapReceiver.hpp
src/gl-headers/glad/: glad.c  glad.h
src/math/: coordinateSystemTransformations.hpp  geometry2d.cpp  geometry2d.hpp  random.hpp
src/output/Outputs/2025.03.31-18.43.56.661/pipe3-c/: #1-Sphere type.txt
src/output/Outputs/2025.03.31-18.51.27.122/pipe3-c/: #1-Sphere type.txt
src/shaders/: shader.h
